parser/sample_tests/ours/switch.txt

*** Error line 10.
	n = ReadInteger();
        ^
*** syntax error

